# NanoVNA-Screenshot-Exporter

./: .gitignore  ATTRIBUTIONS.md  LICENSE  README.md  build_windows.bat  pyproject.toml  requirements-dev.txt  run.py  run_windows.bat
.github/workflows/: build-windows.yml
nanovna_exporter/: __init__.py  discovery.py  exporter.py  files.py  gui.py  models.py  serial_device.py
tests/: test_files.py  test_serial_protocol.py
